# undergraduate_robotics_assignment

./: README.md  install_dependencies.sh
src/part1/python/: kinematics.py  kinematics_bonus.py
src/part1/ros2/: README.md  package.xml  setup.cfg  setup.py
src/part1/ros2/launch/: localization.launch.py  obstacle_avoidance.launch.py  webots_world.launch.py
src/part1/ros2/part1_ros2/: localization.py  obstacle_avoidance.py  plot_trajectory.py  robot_pose_publisher.py
src/part1/ros2/resource/: part1_ros2  ros2control.yml  turtlebot_webots.urdf
src/part1/ros2/worlds/: assignment.wbt
src/part2/python/: potential_field.py  rrt.py
src/part2/ros2/: README.md  package.xml  setup.cfg  setup.py
src/part2/ros2/launch/: map.launch.py  potential_field_navigation.launch.py  receive_clock.launch.py  rrt_navigation.launch.py  send_clock.launch.py  slam.launch.py  stop.launch.py  webots_world.launch.py
src/part2/ros2/part2_ros2/: fake_localization.py  plot_trajectory.py  potential_field_navigation.py  receive_clock.py  robot_pose_publisher.py  rrt_navigation.py  send_clock.py  stop.py
src/part2/ros2/resource/: part2_ros2  turtlebot_webots.urdf
src/part2/ros2/rviz/: assignment.rviz
