<?xml version="1.0"?>
<package format="3">
  <name>part1_ros2</name>
  <version>0.0.0</version>
  <description>Part 1 Webots + ROS 2 nodes for the undergraduate robotics assignment.</description>
  <maintainer email="yc57974@um.edu.mo">syy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>webots_ros2_driver</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
